[projectfirma/#161] Improve display/layout of wizard Fixed issue with Enlarge link having too much padding
git-svn-id: https://svn.sitkatech.com/svn/sitkatech/trunk/ProjectFirma@137286 0729f40c-f363-46e8-bae2-8dcc587728a9

--- a/Source/ProjectFirma.Web/Content/Bootstrap/firma/default.theme.less
+++ b/Source/ProjectFirma.Web/Content/Bootstrap/firma/default.theme.less
@@ -971,7 +971,7 @@ h2.collapsed {
 .firmaChartControls {
     float: right;
     position: relative;
-    bottom: 40px;
+    bottom: 30px;
     right: 10px;
     vertical-align: top;
 }
